<resources>
    <string name="app_name">About Me</string>
    <string name="nameText">Devansh Sati</string>
    <string name="avatarPhoto">Profile Photo</string>
    <string name="starDesc">Star Image</string>
    <string name="bio">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        \nIt has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
        \nIt was popularised in the 1960s with the release of Elettra sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        \nWhy do we use it?It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        \nThe point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.
        \nMany desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy.
        \nVarious versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).\n\n</string>
    <string name="nameEditText">What is Your Nick Name</string>
    <string name="buttonName">Submit</string>
    <string name="callingNickName">addNickName(it)</string>
    <string name="viewTextHint">SHOWING TEXT</string>
</resources>