<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data><variable name="MyName" type="com.example.aboutme.MyName" /></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/avatarPhoto"
        android:orientation="vertical"
        android:paddingStart="@dimen/bioPadding"
        android:paddingEnd="@dimen/bioPadding"
        tools:ignore="UseCompoundDrawables"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            style="@style/styleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={MyName.name}"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:autofillHints=""
            android:ems="15"
            android:hint="@string/nameEditText"
            android:inputType="text" />

        <Button
            android:id="@+id/clickBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/btnColor"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/buttonName" />

        <TextView
            android:id="@+id/viewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:hint="@string/viewTextHint"
            android:textAlignment="center"
            android:textColor="#673AB7"
            android:textSize="30sp"
            android:text="@={MyName.nickName}"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/star"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:contentDescription="@string/starDesc"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:src="@android:drawable/btn_star_big_on"/>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bio"
                style="@style/bioTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textAlignment="viewStart"
                android:textSize="20sp" />
        </ScrollView>

    </LinearLayout>
</layout>